--- a/app/templates/app/modules/config.modules.json
+++ b/app/templates/app/modules/config.modules.json
@@ -2,12 +2,10 @@
 	{
 	 	"name": "Test 1",
 	 	"path": "test1/module.test1",
-	 	"url": "/test1",
-	 	"navigationTrigger": "show:test1"
+	 	"baseUrl": "test1"
 	},{
 	 	"name": "Test 2",
 	 	"path": "test2/module.test2",
-	 	"url": "/test2",
-	 	"navigationTrigger": "show:test2"
+	 	"baseUrl": "test2"
 	}
 ]
