Yay, dynamic module stuff works! Modules just need to instantiate a new ModuleManager and pass in their own config file

--- a/app/templates/app/global/config/config.module.global.json
+++ b/app/templates/app/global/config/config.module.global.json
@@ -1,6 +1,7 @@
 {
-	"baseUrl": "modules/all",
+	"basePath": "modules/all",
 	"baseRoute": "load_module",
+	"eventTrigger": "global:modulemanager:loaded",
 	"modules": [
 		{
 			"title": "Test 1",
