--- a/app/templates/app/global/config/config.module.global.json
+++ b/app/templates/app/global/config/config.module.global.json
@@ -4,13 +4,9 @@
 	"baseTrigger": "global",
 	"modules": [
 		{
-			"title": "Test 1",
-		 	"path": "test1/module.test1",
-		 	"url": "test1"
-		},{
-			"title": "Test 2",
-		 	"path": "test2/module.test2",
-		 	"url": "test2"
+			"title": "Example",
+		 	"path": "example/module.example",
+		 	"url": "example"
 		}
 	]
 }
