Major pivot. I realized that I was A) over-engineering things a bit and B) repeating existing functionality. So now, each module boils down to Module, Controller, Router and Config files. The Router is shared, as its functionality is repeated over and over again, and the Controller extends from a shared file, allowing developers to set their route controller as well as extend the controller with more functionality

--- a/app/templates/app/modules/all/example/config.module.example.json
+++ b/app/templates/app/modules/all/example/config.module.example.json
@@ -5,17 +5,17 @@
         "baseRoute": "load_module_example"
     },
     "list": [
-        {
-            "title": "Sub 1",
-            "url": "sub1",
-            "path": "sub1/module.sub1",
-            "route": "sub1"
-        },{
-            "title": "Sub 2",
-            "url": "sub2",
-            "path": "sub2/module.sub2",
-            "route": "sub2",
-            "default": true
-        }
+        // {
+        //     "title": "Sub 1",
+        //     "url": "sub1",
+        //     "path": "sub1/module.sub1",
+        //     "route": "sub1"
+        // },{
+        //     "title": "Sub 2",
+        //     "url": "sub2",
+        //     "path": "sub2/module.sub2",
+        //     "route": "sub2",
+        //     "default": true
+        // }
     ]
 }
