--- a/app/templates/app/config.module.app.json
+++ b/app/templates/app/config.module.app.json
@@ -17,7 +17,6 @@
         }
     ],
     "global": [
-        {   "path": "global/regions/header/module.header"   },
-        {   "path": "global/regions/content/module.content" }
+        {   "path": "global/regions/header/module.header"   }
     ]
 }
