Bug #13 : Routers and Controllers have been refactored to utter beauty. Apps and Modules have Routers (and no Controllers) and Sub modules have Controllers (and no Routers)

--- a/app/templates/app/config.app.json
+++ b/app/templates/app/config.app.json
@@ -1,13 +1,18 @@
 {
-    "config": {
-        "baseURL": ""
+    "base": {
+        "url": ""
     },
     "modules": [
         {
-            "title": "Example",
-            "url": "example",
-            "path": "modules/all/example/module.example",
-            "route": "load_module_example"
+            "load": {
+                "title": "Example",
+                "url": "example",
+                "path": "modules/all/example/module.example"
+            },
+            "route": {
+                "callback": "load_module_example",
+                "trigger": "route:module:example"
+            }
         }
     ]
 }
