Work on #2 . Need to figure out how to set the base module's nav item as active when the sub module is set active

--- a/app/templates/app/config.app.json
+++ b/app/templates/app/config.app.json
@@ -1,6 +1,9 @@
 {
     "base": {
-        "url": ""
+        "url": "",
+        "flags": {
+            "global": true
+        }
     },
     "modules": [
         {
