Added hidden flag functionality. If you set a flag called hidden to true within a module or sub module config file, that module will be excluded from the nav, but the routes will still work

--- a/app/templates/app/modules/all/example1/config.example1.json
+++ b/app/templates/app/modules/all/example1/config.example1.json
@@ -23,6 +23,9 @@
             "route": {
                 "callback": "load_module_example1_sub2",
                 "trigger": "route:module:example1:sub2"
+            },
+            "flags": {
+                "hidden": true
             }
         }
     ]
