Now, load.url can be an array of urls as well, to accomodate for multiple routes that go to the same place (usually useful for urls that contain variables)

--- a/app/templates/app/modules/all/example1/config.example1.json
+++ b/app/templates/app/modules/all/example1/config.example1.json
@@ -7,7 +7,7 @@
         {
             "load": {
                 "title": "E1: Sub 1",
-                "url": "example1/sub1",
+                "url": ["example1/sub1"],
                 "path": "modules/all/example1/sub1/module.sub1"
             },
             "route": {
