submodule without templating working

--- a/module/templates/_myModule/config._myModule.json
+++ b/module/templates/_myModule/config._myModule.json
@@ -1,7 +1,7 @@
 {
 	"base": {
-		"title": "<%= titleCaseName %>",
-		"url": "<%= lowerCaseName %>"
+		"title": "<%= moduleTitleCaseName %>",
+		"url": "<%= moduleLowerCaseName %>"
 	},
 	"modules": []
 }
