--- a/.travis.yml
+++ b/.travis.yml
@@ -3,5 +3,5 @@ node_js:
   - '0.10'
 before_install:
   - currentfolder=${PWD##*/}
-  - if [ "$currentfolder" != 'generator-marionette-base-spa' ]; then cd .. && eval "mv $currentfolder generator-marionette-base-spa" && cd generator-marionette-base-spa; fi
+  - if [ "$currentfolder" != 'generator-marman' ]; then cd .. && eval "mv $currentfolder generator-marman" && cd generator-marman; fi
 
