--- a/app/templates/app/modules/all/example1/config.example1.json
+++ b/app/templates/app/modules/all/example1/config.example1.json
@@ -7,7 +7,7 @@
         {
             "load": {
                 "title": "E1: Sub 1",
-                "url": ["example1/sub1"],
+                "url": ["sub1"],
                 "path": "modules/all/example1/sub1/module.sub1"
             },
             "route": {
@@ -17,7 +17,7 @@
         },{
             "load": {
                 "title": "E1: Sub 2",
-                "url": "example1/sub2",
+                "url": "sub2",
                 "path": "modules/all/example1/sub2/module.sub2"  
             },
             "route": {
@@ -25,7 +25,7 @@
                 "trigger": "route:module:example1:sub2"
             },
             "flags": {
-                "hidden": true
+                "hidden": false
             }
         }
     ]
