--- a/package.json
+++ b/package.json
@@ -1,10 +1,10 @@
 {
-  "name": "generator-marionette-base-spa",
+  "name": "generator-marman",
   "version": "0.1.0",
-  "description": "Backbone/Marionette SPA Generator",
+  "description": "Modular Marionette Apps",
   "license": "MIT",
   "main": "app/index.js",
-  "repository": "moldyman/generator-marionette-base-spa",
+  "repository": "moldyman/generator-marman",
   "author": {
     "name": "Erik Moldovan",
     "email": "erikmoldovan@gmail.com",
