--- a/app/templates/package.json
+++ b/app/templates/package.json
@@ -8,6 +8,7 @@
     "grunt-sass": "~0.10.0"
   },
   "devDependencies": {
+    "docco-husky": "^0.3.3",
     "grunt-contrib-watch": "~0.5.3",
     "grunt-contrib-connect": "~0.6.0",
     "request": "~2.33.0",
