--- a/package.json
+++ b/package.json
@@ -23,8 +23,8 @@
     "yeoman-generator"
   ],
   "dependencies": {
-    "yeoman-generator": "~0.16.0",
-    "chalk": "~0.4.0"
+    "chalk": "~0.4.0",
+    "yeoman-generator": "~0.16.0"
   },
   "devDependencies": {
     "mocha": "*"
